--- a/templates/about.html
+++ b/templates/about.html
@@ -2,4 +2,9 @@
 
 {% block content %}
 <h1>About page</h1>
+<ul>
+	<p>Página de teste</p>
+	<p>The end of upstream support for Oracle 11.2 is Dec. 2020. Django 1.11 will be supported until April 2020 which almost reaches this date. Django 2.0 officially supports Oracle 12.1+.</p>
+	<p>The end of upstream support for Oracle 11.2 is Dec. 2020. Django 1.11 will be supported until April 2020 which almost reaches this date. Django 2.0 officially supports Oracle 12.1+.</p>
+</ul>
 {% endblock %}
