--- a/templates/home.html
+++ b/templates/home.html
@@ -2,4 +2,10 @@
 
 {% block content %}
 <h1>HomePage</h1>
+<ul>
+	{% for promotora in object_list %}
+	<li>{{ promotora }}</li>
+	{% endfor %}
+</ul>
+
 {% endblock %}
