--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,24 @@
 <!-- templates/base.html -->
-
-<header>
-	<a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">About</a>
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Promotoras</title>
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">	
+	<link rel="stylesheet" href="{% static 'css/base.css' %}">
+</head>
+<body>
+	<header>
+		
+		<a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">About</a>
 </header>
+<div class="container">
+	{% block content %}
+	{% endblock content %}	
+</div>
+
+</body>
+</html>
+
+
  
-{% block content %}
-{% endblock %}
