--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,21 @@
 	<link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
-	<header>
+	<div class="container">
+		<header>
+		<div class="nav-left">
+			<a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">About</a>
+			
+		</div>
 		
-		<a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">About</a>
-</header>
+		<div class="nav-right">
+			<a href="{% url 'promotora_new' %}">Add New Promotora</a>
+		</div>		
+		
+		</header>
+		
+	</div>
+	
 <div class="container">
 	{% block content %}
 	{% endblock content %}	
