--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base2.html' %}
 
 {% block content %}
-<h1>About page</h1>
 <ul>
-	<p>Página de teste</p>
-	<p>The end of upstream support for Oracle 11.2 is Dec. 2020. Django 1.11 will be supported until April 2020 which almost reaches this date. Django 2.0 officially supports Oracle 12.1+.</p>
-	<p>The end of upstream support for Oracle 11.2 is Dec. 2020. Django 1.11 will be supported until April 2020 which almost reaches this date. Django 2.0 officially supports Oracle 12.1+.</p>
+	<h1>Bem Vindo</h1>
+	<p>Sistema Cadastro Degustações</p>
+	<p>VR CAMPOS INDUSTRIA E COMÉRCIO EIRELI</p>
+	<p>QUEIJOS CAXAMBU</p>
 </ul>
 {% endblock %}
