--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 	<div class="container">
 		<header>
 		<div class="nav-left">
-			<a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">About</a> | 
+			<a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">Promotoras</a> | 
 			<a href="{% url 'cliente_list' %}">Clientes</a>
 			
 		</div>
