--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,6 @@
 	<h1>Bem Vindo</h1>
 	<p>Sistema Cadastro Degustações</p>
 	<p>VR CAMPOS INDUSTRIA E COMÉRCIO EIRELI</p>
-	<p>QUEIJOS CAXAMBU</p>
+	<p>site <a href="http://queijoscaxambu.com.br">Queijos Caxambu</a> </p>
 </ul>
 {% endblock %}
