--- a/templates/cliente_list.html
+++ b/templates/cliente_list.html
@@ -1,16 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'base2.html' %}
 
 {% block content %}
-<style>
-	table, th, td {
-		border: 1px solid black;
-		border-collapse: collapse;
-	}
-	th, td { 
-		padding: 5px;
-		text-align: left;
-	}
-</style>
+
 
 <div class="table">
 	<table style="width: 100%">
@@ -25,7 +16,7 @@
 
 		<tr>
 			{% for cliente in object_list %}
-			
+
 			<td>{{ cliente.codigo }}</td>
 			<td><a href="">{{ cliente.razao_social }}</a></td>
 			<td>{{ cliente.fantasia }}</td>
@@ -34,11 +25,11 @@
 			<td>{{ cliente.cep }}</td>
 		</tr>
 		{% endfor %}
-		
-	</table>	
-	
+
+	</table>
+
 	</div>
-	
+
 
 
 
