--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,10 @@
 
 {% block content %}
 	{% for promotora in object_list %}
-	<div class="post-entry">
+	<div class="">
 		<h2><a href="{% url 'promotora_detail' promotora.pk %}">{{ promotora.nome }}</a></h2>
 		<p>{{ promotora.endereco }}</p>
 	</div>
 	{% endfor %}
+	<p><a href="{% url 'promotora_new' %}">Adicionar Novo(a) Promotor(a)</a></p>
 {% endblock content %}
