--- a/templates/promotora_edit.html
+++ b/templates/promotora_edit.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'base2.html' %}
 
 {% block content %}
 <h1>Editar Promotor(a)</h1>
 <form action="" method="post">{% csrf_token %}
 	{{ form.as_p }}
-	<input type="submit" value="Update">	
+	<input type="submit" value="Update">
 </form>
 {% endblock %}
