--- a/templates/promotora_new.html
+++ b/templates/promotora_new.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'base2.html' %}
 
 {% block content %}
 <h1>Novo(a) Promotor(a)</h1>
 <form action="" method="post">{% csrf_token %}
 	{{ form.as_p }}
-	<input type="submit" value="Save" />	
+	<input type="submit" value="Save" />
 </form>
 {% endblock %}
