--- a/templates/base2.html
+++ b/templates/base2.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Hello, world!</title>
+    <title>Queijos Caxambu</title>
 
   </head>
   <body>
@@ -36,6 +36,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'cliente_list' %}">Clientes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'tasting_list' %}">Degustações</a>
           </li>
 
         </ul>
