tentando adicionar o calendar picker ou coisa parecida para pegar a data no django

--- a/templates/cliente_list.html
+++ b/templates/cliente_list.html
@@ -1,7 +1,7 @@
 {% extends 'base2.html' %}
 
 {% block content %}
-
+<h3>Lista de Clientes Cadastrados</h3>
 
 <div class="table">
 	<table style="width: 100%">
