--- a/templates/base2.html
+++ b/templates/base2.html
@@ -8,18 +8,17 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Queijos Caxambu</title>
-
   </head>
-  <body>
-    <style>
-    .container {
-        padding-top: 5rem;
-      }
-      .starter-template {
-        padding: 3rem 1.5rem;
-        text-align: center;
-      }
-    </style>
+    <body>
+      <style>
+      .container {
+          padding-top: 5rem;
+        }
+        .starter-template {
+          padding: 3rem 1.5rem;
+          text-align: center;
+        }
+      </style>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="#"></a>
@@ -32,7 +31,7 @@
             <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'about' %}">Promotoras</a>
+            <a class="nav-link" href="{% url 'promotora_list' %}">Promotoras</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'cliente_list' %}">Clientes</a>
