--- a/templates/promotora_delete.html
+++ b/templates/promotora_delete.html
@@ -4,8 +4,6 @@
 	<h1>Apagar Promotor(a)</h1>
 	<form action="" method="post">{% csrf_token %}
 		<p>Você realmente quer apagar "{{ promotora.nome }}"?</p>
-		<input type="submit" value="Confirmar" />
+		<input type="submit" class="btn btn-danger" value="Confirmar" />
 	</form>
-
-
 {% endblock content %}
