--- a/templates/promotora_new.html
+++ b/templates/promotora_new.html
@@ -3,7 +3,17 @@
 {% block content %}
 <h1>Novo(a) Promotor(a)</h1>
 <form action="" method="post">{% csrf_token %}
-	{{ form.as_p }}
+	{% for field in form %}
+	<tr>
+		<td>{{ field.errors }}</td>
+		<td>{{ field.label_tag }}</td>
+		<td><p>{{ field }}</p></td>
+	</tr>
+	{% endfor %}
 	<input type="submit" value="Save" />
 </form>
+
+
+
+
 {% endblock %}
