--- a/templates/tasting_new.html
+++ b/templates/tasting_new.html
@@ -3,7 +3,14 @@
 {% block content %}
 <h1>Cadastrar Degustação</h1>
 <form action="" method="post">{% csrf_token %}
-	{{ form.as_p }}
-	<input type="submit" value="Save" />
+	{% for field in form %}
+	<tr>
+		<td>{{ field.errors }}</td>
+		<td>{{ field.label_tag }}</td>
+		<td><p>{{ field }}</p></td>
+	</tr>
+	{% endfor %}
+	<input type="submit" value="Salvar" />
 </form>
+
 {% endblock %}
