tentativas de melhorias, botões etc

--- a/templates/promotora_new.html
+++ b/templates/promotora_new.html
@@ -10,7 +10,7 @@
 		<td><p>{{ field }}</p></td>
 	</tr>
 	{% endfor %}
-	<input type="submit" value="Save" />
+	<input class="btn btn-primary" type="submit" value="Salvar" />
 </form>
 
 
