--- a/templates/tasting_new.html
+++ b/templates/tasting_new.html
@@ -1,16 +1,16 @@
 {% extends 'base2.html' %}
+{% load static %}
+
 
 {% block content %}
-<h1>Cadastrar Degustação</h1>
-<form action="" method="post">{% csrf_token %}
-	{% for field in form %}
-	<tr>
-		<td>{{ field.errors }}</td>
-		<td>{{ field.label_tag }}</td>
-		<td><p>{{ field }}</p></td>
-	</tr>
-	{% endfor %}
-	<input type="submit" value="Salvar" />
+<h2>Cadastrar Degustação</h2>
+<form action="" method="post">
+    {% csrf_token %}
+    <table>
+    {{ form.as_table }}
+    </table>
+
+    <input class="btn btn-primary" type="submit" value="Salvar" />
 </form>
 
 {% endblock %}
